Added an implementation for the IAudioClock and the IAudioClock2 COM objects.

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -262,6 +262,8 @@
     <Compile Include="CoreAudioAPI\AudioCaptureClient.cs" />
     <Compile Include="CoreAudioAPI\AudioClientBufferFlags.cs" />
     <Compile Include="CoreAudioAPI\AudioClientStreamFlags.cs" />
+    <Compile Include="CoreAudioAPI\AudioClock.cs" />
+    <Compile Include="CoreAudioAPI\AudioClock2.cs" />
     <Compile Include="CoreAudioAPI\AudioMeterInformation.cs" />
     <Compile Include="CoreAudioAPI\AudioSessionChannelVolumeChangedEventArgs.cs" />
     <Compile Include="CoreAudioAPI\AudioSessionControl2.cs" />
