Marked assembly as CLSCompliant.

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -27,7 +27,8 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <UseVSHostingProcess>true</UseVSHostingProcess>
-    <DocumentationFile>bin\Debug\CSCore.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <NoWarn>1573</NoWarn>
   </PropertyGroup>
