Updated the Recorder sample.

--- a/Samples/Recorder/Recorder.csproj
+++ b/Samples/Recorder/Recorder.csproj
@@ -175,6 +175,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GraphVisualization.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
