--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,11 @@ remove.bat
 # others #
 ##########
 *.cd
+# NuGet Packages
+*.nupkg
+# The packages folder can be ignored because of Package Restore
+**/packages/*
+# except build/, which is used as an MSBuild target.
+!**/packages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/packages/repositories.config
