Added missing audio player sample files.

--- a/Samples/AudioPlayerSample/AudioPlayerSample.csproj
+++ b/Samples/AudioPlayerSample/AudioPlayerSample.csproj
@@ -50,6 +50,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MusicPlayer.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
