--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -327,12 +327,21 @@
     <Compile Include="SoundIn\WaveIn.cs" />
     <Compile Include="SoundIn\WaveInBuffer.cs" />
     <Compile Include="SoundIn\WaveInDevice.cs" />
+    <Compile Include="SoundOut\ALSoundOut.cs" />
     <Compile Include="SoundOut\DirectSoundOut.cs" />
     <Compile Include="SoundOut\MMInterop\Utils.cs" />
     <Compile Include="SoundOut\MMInterop\WaveCallback.cs" />
     <Compile Include="SoundOut\MmDeviceFormats.cs" />
     <Compile Include="SoundOut\MmDeviceSupported.cs" />
     <Compile Include="SoundOut\MMInterop\WaveHeaderFlags.cs" />
+    <Compile Include="SoundOut\AL\ALContext.cs" />
+    <Compile Include="SoundOut\AL\ALDevice.cs" />
+    <Compile Include="SoundOut\AL\ALFormat.cs" />
+    <Compile Include="SoundOut\AL\ALInterops.cs" />
+    <Compile Include="SoundOut\AL\ALPlayback.cs" />
+    <Compile Include="SoundOut\AL\ALSource.cs" />
+    <Compile Include="SoundOut\AL\ALSourceParameters.cs" />
+    <Compile Include="SoundOut\AL\ALSourceState.cs" />
     <Compile Include="SoundOut\PlaybackStoppedEventArgs.cs" />
     <Compile Include="SoundOut\WasapiOut.cs" />
     <Compile Include="SoundOut\WaveOut.cs" />
