--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -287,7 +287,7 @@
     <Compile Include="DMO\SetTypeFlags.cs" />
     <Compile Include="DSP\BiQuad.cs" />
     <Compile Include="DSP\ChannelMatrixElement.cs" />
-    <Compile Include="DSP\EqualizerBiQuadFilter.cs" />
+    <None Include="DSP\EqualizerBiQuadFilter.cs" />
     <Compile Include="DSP\FastFourierTransformation.cs" />
     <Compile Include="DSP\FftProvider.cs" />
     <Compile Include="DSP\FftMode.cs" />
